# opengl-course

./: Readme.md
projects/03_development_environment/cmake_project_example/: CMakeLists.txt  Dependency.cmake
projects/03_development_environment/cmake_project_example/src/: main.cpp
projects/04_graphics_pipeline_and_shader/first_opengl_example/: CMakeLists.txt  Dependency.cmake
projects/04_graphics_pipeline_and_shader/first_opengl_example/src/: main.cpp
projects/04_graphics_pipeline_and_shader/point_example/: CMakeLists.txt
projects/04_graphics_pipeline_and_shader/point_example/src/: common.h  context.cpp  context.h  main.cpp  program.cpp  program.h
projects/04_graphics_pipeline_and_shader/triangle_example/: CMakeLists.txt
projects/04_graphics_pipeline_and_shader/triangle_example/shader/: simple.vs
projects/04_graphics_pipeline_and_shader/triangle_example/src/: buffer.h  common.h  context.cpp  context.h  program.cpp  program.h
projects/05_glsl/glsl_example/: CMakeLists.txt
projects/05_glsl/glsl_example/src/: context.cpp
projects/06_texture/texture_example/: CMakeLists.txt  Dependency.cmake
projects/06_texture/texture_example/shader/: texture.fs
projects/06_texture/texture_example/src/: context.cpp  context.h  image.cpp  image.h  texture.cpp
projects/07_transformation/transformation_example/: CMakeLists.txt  Dependency.cmake
projects/07_transformation/transformation_example/shader/: texture.fs  texture.vs
projects/07_transformation/transformation_example/src/: common.h  context.cpp  context.h  main.cpp  program.h  shader.h  vertex_layout.h
projects/08_imgui/imgui_example/: CMakeLists.txt  imgui.ini
projects/08_imgui/imgui_example/shader/: simple.fs
projects/08_imgui/imgui_example/src/: buffer.cpp  context.cpp  context.h  main.cpp  program.cpp
projects/09_lighting/lighting_example/: CMakeLists.txt  Dependency.cmake  imgui.ini
projects/09_lighting/lighting_example/shader/: lighting.fs
projects/09_lighting/lighting_example/src/: common.cpp  common.h  context.cpp  context.h  main.cpp  program.cpp  program.h
projects/10_object/object_example/: CMakeLists.txt  Dependency.cmake  imgui.ini
projects/10_object/object_example/shader/: lighting.fs
projects/10_object/object_example/src/: buffer.h  context.cpp  context.h  image.cpp  mesh.cpp  mesh.h  model.cpp  model.h  program.h  vertex_layout.cpp
projects/11_advanced_feature/advanced_feature_example/: CMakeLists.txt  imgui.ini
projects/11_advanced_feature/advanced_feature_example/shader/: lighting.fs  lighting.vs
projects/11_advanced_feature/advanced_feature_example/src/: buffer.cpp  context.cpp  context.h  image.h  mesh.cpp  mesh.h  model.cpp  (+3 more)
